fix loading styles

--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script defer src="./main.js"></script>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="main.css" />
 
     <!-- HightlightJS import -->
     <link
@@ -32,7 +32,7 @@
       <div class="banner radial">
         <div class="content">
           <h1 class="title">Jibby</h1>
-          <p class="subtitle">Get screenshots of any site with ease.</p>
+          <p class="subtitle">Get a screenshot of any site with ease.</p>
         </div>
       </div>
       <section class="search_container">
