--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -61,6 +61,7 @@
             <circle cx="9" cy="9" r="2" />
             <path d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21" />
           </svg>
+          <span style="height: 20px" class="loading metadata_loading"></span>
         </button>
       </section>
       <section class="metadata_container">
