fix unneeded quotes

--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -192,7 +192,7 @@
               </li>
             </ul>
             <li class="option">
-              format: <span class="pill type">'jpeg' | 'png' | 'webp'</span>
+              format: <span class="pill type">jpeg | png | webp</span>
             </li>
             <ul class="options">
               <li class="option">
