use tables instead

--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -101,9 +101,7 @@
         </div>
         <div class="option_container">
           <h3 class="title result">Options</h3>
-          <ul class="options">
-            <li class="option">No options avaliable.</li>
-          </ul>
+          <div class="option">No options avaliable.</div>
         </div>
         <div class="result_container">
           <h3 class="title result">
@@ -153,77 +151,119 @@
         </div>
         <div class="option_container">
           <h3 class="title result">Options</h3>
-          <ul class="options">
-            <li class="option">width: <span class="pill type">number</span></li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1920</span>
-              </li>
-            </ul>
-            <li class="option">
-              height: <span class="pill type">number</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1080</span>
-              </li>
-            </ul>
-            <li class="option">scale: <span class="pill type">number</span></li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1</span>
-              </li>
-            </ul>
-            <li class="option">Clip:</li>
-            <ul class="options">
-              <li class="option">
-                clipX: <span class="pill type">number</span>
-              </li>
-              <li class="option">
-                clipY: <span class="pill type">number</span>
-              </li>
-            </ul>
-            <li class="option">
-              quality: <span class="pill type">number</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">80</span>
-              </li>
-            </ul>
-            <li class="option">
-              format: <span class="pill type">jpeg | png | webp</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">webp</span>
-              </li>
-            </ul>
-            <li class="option">
-              fullPage: <span class="pill type">boolean</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">false</span>
-              </li>
-            </ul>
-            <li class="option">
-              omitBackground: <span class="pill type">boolean</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">false</span>
-              </li>
-            </ul>
-            <li class="option">
-              darkMode: <span class="pill type">boolean</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">false</span>
-              </li>
-            </ul>
-          </ul>
+          <div class="option">
+            <div class="row header">
+              <h6>Param</h6>
+              <h6>Type</h6>
+              <h6>Default</h6>
+            </div>
+            <div class="row">
+              <div>
+                <p>width</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">1920</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>height</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">1080</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>scale</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">1</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>clipX</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div></div>
+            </div>
+            <div class="row">
+              <div>
+                <p>clipY</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div></div>
+            </div>
+            <div class="row">
+              <div>
+                <p>quality</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">80</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>format</p>
+              </div>
+              <div>
+                <p class="pill type">jpeg | png | webp</p>
+              </div>
+              <div>
+                <p class="pill default">webp</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>fullPage</p>
+              </div>
+              <div>
+                <p class="pill type">boolean</p>
+              </div>
+              <div>
+                <p class="pill default">false</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>omitBackground</p>
+              </div>
+              <div>
+                <p class="pill type">boolean</p>
+              </div>
+              <div>
+                <p class="pill default">false</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>darkMode</p>
+              </div>
+              <div>
+                <p class="pill type">boolean</p>
+              </div>
+              <div>
+                <p class="pill default">false</p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="result_container">
           <h3 class="title result">
@@ -273,69 +313,57 @@
         </div>
         <div class="option_container">
           <h3 class="title result">Options</h3>
-          <ul class="options">
-            <li class="option">width: <span class="pill type">number</span></li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1920</span>
-              </li>
-            </ul>
-            <li class="option">
-              height: <span class="pill type">number</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1080</span>
-              </li>
-            </ul>
-            <li class="option">scale: <span class="pill type">number</span></li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1</span>
-              </li>
-            </ul>
-            <li class="option">
-              darkMode: <span class="pill type">boolean</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">false</span>
-              </li>
-            </ul>
-            <li class="option">
-              animation: <span class="pill type">string</span>
-            </li>
-            <ul class="options">
-              <li class="option">
-                default: <span class="pill default">1000,500,0,smooth</span>
-              </li>
-            </ul>
-            <ul class="options">
-              <li class="option">
-                <p style="padding-bottom: 1rem">animation format:</p>
-                <ul class="options">
-                  <li class="option">
-                    wait: <span class="pill type">number</span>
-                  </li>
-                  <li class="option">
-                    top: <span class="pill type">number</span>
-                  </li>
-                  <li class="option">
-                    left: <span class="pill type">number</span>
-                  </li>
-                  <li class="option">
-                    behavior:
-                    <span class="pill type">auto | instant | smooth</span>
-                  </li>
-                </ul>
-              </li>
-              <li class="option">
-                example: animation=1000,100,0,smooth (wait 1000 ms, scroll down
-                from top 100 units, scroll from left 0 units, scroll behavior
-                smooth)
-              </li>
-            </ul>
-          </ul>
+          <div class="option">
+            <div class="row header">
+              <h6>Param</h6>
+              <h6>Type</h6>
+              <h6>Default</h6>
+            </div>
+            <div class="row">
+              <div>
+                <p>width</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">1920</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>height</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">1080</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>scale</p>
+              </div>
+              <div>
+                <p class="pill type">number</p>
+              </div>
+              <div>
+                <p class="pill default">1</p>
+              </div>
+            </div>
+            <div class="row">
+              <div>
+                <p>darkMode</p>
+              </div>
+              <div>
+                <p class="pill type">boolean</p>
+              </div>
+              <div>
+                <p class="pill default">false</p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="result_container">
           <h3 class="title result">
