add caching updating params in docs

--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -151,116 +151,118 @@
         </div>
         <div class="option_container">
           <h3 class="title result">Options</h3>
-          <div class="option">
-            <div class="row header">
-              <h6>Param</h6>
-              <h6>Type</h6>
-              <h6>Default</h6>
-            </div>
-            <div class="row">
-              <div>
-                <p>width</p>
+          <div class="option_table">
+            <div class="option">
+              <div class="row header">
+                <h6>Param</h6>
+                <h6>Type</h6>
+                <h6>Default</h6>
               </div>
-              <div>
-                <p class="pill type">number</p>
+              <div class="row">
+                <div>
+                  <p>width</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">1280</p>
+                </div>
               </div>
-              <div>
-                <p class="pill default">1920</p>
+              <div class="row">
+                <div>
+                  <p>height</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">720</p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>height</p>
+              <div class="row">
+                <div>
+                  <p>scale</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">1</p>
+                </div>
               </div>
-              <div>
-                <p class="pill type">number</p>
+              <div class="row">
+                <div>
+                  <p>clipX</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div></div>
               </div>
-              <div>
-                <p class="pill default">1080</p>
+              <div class="row">
+                <div>
+                  <p>clipY</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div></div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>scale</p>
+              <div class="row">
+                <div>
+                  <p>quality</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">80</p>
+                </div>
               </div>
-              <div>
-                <p class="pill type">number</p>
+              <div class="row">
+                <div>
+                  <p>format</p>
+                </div>
+                <div>
+                  <p class="pill type">jpeg | png | webp</p>
+                </div>
+                <div>
+                  <p class="pill default">webp</p>
+                </div>
               </div>
-              <div>
-                <p class="pill default">1</p>
+              <div class="row">
+                <div>
+                  <p>fullPage</p>
+                </div>
+                <div>
+                  <p class="pill type">boolean</p>
+                </div>
+                <div>
+                  <p class="pill default">false</p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>clipX</p>
+              <div class="row">
+                <div>
+                  <p>omitBackground</p>
+                </div>
+                <div>
+                  <p class="pill type">boolean</p>
+                </div>
+                <div>
+                  <p class="pill default">false</p>
+                </div>
               </div>
-              <div>
-                <p class="pill type">number</p>
-              </div>
-              <div></div>
-            </div>
-            <div class="row">
-              <div>
-                <p>clipY</p>
-              </div>
-              <div>
-                <p class="pill type">number</p>
-              </div>
-              <div></div>
-            </div>
-            <div class="row">
-              <div>
-                <p>quality</p>
-              </div>
-              <div>
-                <p class="pill type">number</p>
-              </div>
-              <div>
-                <p class="pill default">80</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>format</p>
-              </div>
-              <div>
-                <p class="pill type">jpeg | png | webp</p>
-              </div>
-              <div>
-                <p class="pill default">webp</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>fullPage</p>
-              </div>
-              <div>
-                <p class="pill type">boolean</p>
-              </div>
-              <div>
-                <p class="pill default">false</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>omitBackground</p>
-              </div>
-              <div>
-                <p class="pill type">boolean</p>
-              </div>
-              <div>
-                <p class="pill default">false</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>darkMode</p>
-              </div>
-              <div>
-                <p class="pill type">boolean</p>
-              </div>
-              <div>
-                <p class="pill default">false</p>
+              <div class="row">
+                <div>
+                  <p>darkMode</p>
+                </div>
+                <div>
+                  <p class="pill type">boolean</p>
+                </div>
+                <div>
+                  <p class="pill default">false</p>
+                </div>
               </div>
             </div>
           </div>
@@ -313,65 +315,67 @@
         </div>
         <div class="option_container">
           <h3 class="title result">Options</h3>
-          <div class="option">
-            <div class="row header">
-              <h6>Param</h6>
-              <h6>Type</h6>
-              <h6>Default</h6>
-            </div>
-            <div class="row">
-              <div>
-                <p>width</p>
+          <div class="option_table">
+            <div class="option">
+              <div class="row header">
+                <h6>Param</h6>
+                <h6>Type</h6>
+                <h6>Default</h6>
               </div>
-              <div>
-                <p class="pill type">number</p>
+              <div class="row">
+                <div>
+                  <p>width</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">1280</p>
+                </div>
               </div>
-              <div>
-                <p class="pill default">1920</p>
+              <div class="row">
+                <div>
+                  <p>height</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">720</p>
+                </div>
               </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>height</p>
+              <div class="row">
+                <div>
+                  <p>scale</p>
+                </div>
+                <div>
+                  <p class="pill type">number</p>
+                </div>
+                <div>
+                  <p class="pill default">1</p>
+                </div>
               </div>
-              <div>
-                <p class="pill type">number</p>
+              <div class="row">
+                <div>
+                  <p>darkMode</p>
+                </div>
+                <div>
+                  <p class="pill type">boolean</p>
+                </div>
+                <div>
+                  <p class="pill default">false</p>
+                </div>
               </div>
-              <div>
-                <p class="pill default">1080</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>scale</p>
-              </div>
-              <div>
-                <p class="pill type">number</p>
-              </div>
-              <div>
-                <p class="pill default">1</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>darkMode</p>
-              </div>
-              <div>
-                <p class="pill type">boolean</p>
-              </div>
-              <div>
-                <p class="pill default">false</p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <p>animation</p>
-              </div>
-              <div>
-                <p class="pill type">string</p>
-              </div>
-              <div>
-                <p class="pill default">1000,500,0,smooth</p>
+              <div class="row">
+                <div>
+                  <p>animation</p>
+                </div>
+                <div>
+                  <p class="pill type">string</p>
+                </div>
+                <div>
+                  <p class="pill default">1000,500,0,smooth</p>
+                </div>
               </div>
             </div>
           </div>
