--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -401,6 +401,13 @@
         </div>
       </section>
     </main>
-    <footer>test</footer>
+    <footer class="footer">
+      <div class="content">
+        <p>
+          Made with <span class="heart">♡</span> by
+          <a href="https://kennethbass.com">Kenneth Bass</a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
