Switch to using hono for routing

--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -278,7 +278,7 @@
         </div>
       </section>
       <section class="video_container">
-        <h2 class="title">Video</h2>
+        <h2 class="title">Record</h2>
         <div class="url_container url">
           <input
             id="video_url"
@@ -288,7 +288,7 @@
             value="https://api.jibby.space/screenshot/https://kennethbass.com"
           />
           <p>
-            https://api.jibby.space/video/<span
+            https://api.jibby.space/record/<span
               id="display_url"
               class="pill type"
             ></span>
@@ -407,6 +407,8 @@
           Made with <span class="heart">♡</span> by
           <a href="https://kennethbass.com">Kenneth Bass</a>
         </p>
+        <a href="https://github.com/dishwasher-detergent/screenshot">Github</a>
+        <p>License: MIT</p>
       </div>
     </footer>
   </body>
