update for cloud

--- a/functions/screenshot/static/index.html
+++ b/functions/screenshot/static/index.html
@@ -67,12 +67,7 @@
       <section class="metadata_container">
         <h2 class="title">Metadata</h2>
         <div class="url_container url">
-          <input
-            id="metadata_url"
-            class="hidden"
-            readonly
-            value="https://api.jibby.space/metadata/https://kennethbass.com"
-          />
+          <input id="metadata_url" class="hidden" readonly />
           <p>
             https://api.jibby.space/metadata/<span
               id="display_url"
@@ -116,13 +111,7 @@
       <section class="screenshot_container">
         <h2 class="title">Screenshot</h2>
         <div class="url_container url">
-          <input
-            id="screenshot_url"
-            class="hidden"
-            type="text"
-            readonly
-            value="https://api.jibby.space/screenshot/https://kennethbass.com"
-          />
+          <input id="screenshot_url" class="hidden" type="text" readonly />
           <p>
             https://api.jibby.space/screenshot/<span
               id="display_url"
@@ -280,13 +269,7 @@
       <section class="video_container">
         <h2 class="title">Record</h2>
         <div class="url_container url">
-          <input
-            id="video_url"
-            class="hidden"
-            type="text"
-            readonly
-            value="https://api.jibby.space/screenshot/https://kennethbass.com"
-          />
+          <input id="video_url" class="hidden" type="text" readonly />
           <p>
             https://api.jibby.space/record/<span
               id="display_url"
